fixed bag with showing theme dialog on mobile devices

--- a/src/styles/components/create-theme.scss
+++ b/src/styles/components/create-theme.scss
@@ -1,45 +1,38 @@
 .create-theme-modal {
-  position: fixed;
-  z-index: 1001;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background: repeating-linear-gradient(
-    30deg,
-    rgba(24, 194, 236, 0.2),
-    rgba(24, 194, 236, 0.2) 1px,
-    rgba(24, 194, 236, 0.3) 1px,
-    rgba(24, 194, 236, 0.3) 20px
-  );
-  backdrop-filter: blur(1px);
+  padding: 0;
   font-size: 1.6rem;
+	box-shadow: 0 0 1em rgb(0 0 0 / .3);
+	max-width: 50%;
 
-  &__container {
-    position: relative;
-    background-color: rgb(254, 254, 254);
-    margin: auto;
-    width: 50%;
-    border: 1px solid rgb(136, 136, 136);
-    animation-name: "plopdown";
-    animation-duration: 0.4s;
-
-		@media screen and (max-width: 992px) {
-			width: 70%;
-		}
-
-		@media screen and (max-width: 600px) {
-			width: 90%;
-		}
+  &::backdrop {
+    background: repeating-linear-gradient(
+      30deg,
+      rgba(24, 194, 236, 0.2),
+      rgba(24, 194, 236, 0.2) 1px,
+      rgba(24, 194, 236, 0.3) 1px,
+      rgba(24, 194, 236, 0.3) 20px
+    );
+    backdrop-filter: blur(1px);
   }
 
-	&__main {
-		@media only screen and (max-width: 992px) {
-			flex-direction: column;
-		}
+	@media screen and (max-width: 992px) {
+		max-width: 70%;
 	}
+
+	@media screen and (max-width: 555px) {
+		max-width: 85%;
+	}
+
+  &__container {
+    animation-name: "plopdown";
+    animation-duration: 0.4s;
+  }
+
+  &__main {
+    @media only screen and (max-width: 992px) {
+      flex-direction: column;
+    }
+  }
 
   &__header {
     display: flex;
@@ -79,64 +72,64 @@
   gap: 10px;
 
   &__group {
-		display: flex;
-		align-items: center;
+    display: flex;
+    align-items: center;
 
-		@media screen and (max-width: 600px) {
-			align-items: flex-start;
-			flex-direction: column;
-		}
+    @media screen and (max-width: 600px) {
+      align-items: flex-start;
+      flex-direction: column;
+    }
 
     label {
       margin-right: 10px;
-			font-size: 1.1rem;
+      font-size: 1.1rem;
     }
   }
 
-	&__color-field {
-		border: none;
-	}
+  &__color-field {
+    border: none;
+  }
 
-	&__field {
-		padding: 5px;
-		font-size: 1.3rem;
-		background: transparent;
-		border: 1px solid;
+  &__field {
+    padding: 5px;
+    font-size: 1.3rem;
+    background: transparent;
+    border: 1px solid;
 
-		&:focus-within {
-			outline: 0;
-		}
-	}
+    &:focus-within {
+      outline: 0;
+    }
+  }
 
-	&__button {
-		border: 1px solid;
-		padding: 5px;
-		cursor: pointer;
-	}
+  &__button {
+    border: 1px solid;
+    padding: 5px;
+    cursor: pointer;
+  }
 }
 
 .theme-preview {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	gap: 5px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 
   &__display {
-		flex: 1;
+    flex: 1;
     border: 2px solid rgb(190, 27, 27);
     border-radius: 4px;
     width: 100%;
     height: 200px;
     padding: 5px;
     background-color: orange;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   &__text {
     font-size: 1.9rem;
-		font-family: inherit;
+    font-family: inherit;
   }
 
   &__button {
@@ -144,50 +137,52 @@
     margin-right: 10px;
   }
 
-	&__link {
-		color: rgb(22, 58, 167);
-		line-height: normal;
-		display: flex;
-		background: red;
-		height: 30px;
-		justify-content: center;
-		align-items: center;
-		margin-top: 10px;
-		text-decoration: none;
-	}
+  &__link {
+    color: rgb(22, 58, 167);
+    line-height: normal;
+    display: flex;
+    background: red;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    text-decoration: none;
+  }
 }
 
 .theme-button {
-	line-height: normal;
-	font-size: 2rem;
-	position: absolute;
-	right: 20px;
-	top: 13px;
-	cursor: pointer;
+  line-height: normal;
+  font-size: 2rem;
+  position: absolute;
+  right: 20px;
+  top: 13px;
+  cursor: pointer;
+  z-index: 300;
+  color: white;
 }
 
 .custom-theme-list {
-	padding: 20px;
-	display: flex;
-	justify-content: flex-start;
-	gap: 20px;
-	flex-wrap: wrap;
-	background: #780206;
-	max-height: 300px;
-	overflow: auto;
-	background: -webkit-linear-gradient(to right, #061161, #780206);
-	background: linear-gradient(to right, #061161, #780206);
+  padding: 20px;
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  flex-wrap: wrap;
+  background: #780206;
+  max-height: 300px;
+  overflow: auto;
+  background: -webkit-linear-gradient(to right, #061161, #780206);
+  background: linear-gradient(to right, #061161, #780206);
 
-	.theme {
-		height: 100px;
-		flex: 0 0 47%;
-		padding: 5px;
-		cursor: pointer;
-		background-color: yellow;
-		border: 2px solid wheat;
+  .theme {
+    height: 100px;
+    flex: 0 0 47%;
+    padding: 5px;
+    cursor: pointer;
+    background-color: yellow;
+    border: 2px solid wheat;
 
-		@media screen and (max-width: 790px)  {
-			flex: 0 0 100%;
-		}
-	}
+    @media screen and (max-width: 790px) {
+      flex: 0 0 100%;
+    }
+  }
 }
